...
        
        if(type == nil){
            self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Create", style: .done, target: self, action: #selector(createPointType))
            setPermissionLevel(value: PointType.PermissionLevel.rec)
        }
        else{
            self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Update", style: .done, target: self, action: #selector(updatePointType))
            nameTextView.text = type!.pointName
            descriptionTextView.text = type!.pointDescription
            residentsCanSubmitSwitch.isOn = type!.residentCanSubmit
            setPermissionLevel(value: type!.permissionLevel)
            permissionSlider.value = Float(abs(type!.permissionLevel.rawValue))
            enabledSwitch.isOn = type!.isEnabled
...
        type!.pointDescription = description
        type!.isEnabled = isEnabled
        self.navigationItem.rightBarButtonItem?.isEnabled = false
        DataManager.sharedManager.updatePointType(pointType: type!) { (error) in
            if(error == nil){
                self.navigationController?.popViewController(animated: true)
                self.notify(title: "Success", subtitle: "Point Type Updated", style: .success)
            }
            else{
                self.notify(title: "Error", subtitle: "Database errpr", style: .danger)
                self.navigationItem.rightBarButtonItem?.isEnabled = true
            }
        }
...
